--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "rap2hpoutre/fast-excel",
+    "name": "maximiwrk/fast-excel",
     "type": "library",
     "keywords": [
         "laravel",
